# dbfish

./: .gitignore  Cargo.toml  Dockerfile  HACKME.md  LICENSE  README.md  files.txt
src/: config.rs  definitions.rs  main.rs
src/commands/: common.rs  data_source.rs  export.rs  mod.rs  schema.rs  shell.rs  sources.rs
src/commands/shell/: duckdb.py  mod.rs  mysql.py  postgres.py  sqlite.py
src/destinations/: csv.rs  debug.rs  duckdb.rs  json.rs  mod.rs  ods.rs  ods_xlsx.rs  parquet.rs  sqlite.rs  text.rs  text_vertical.rs  xlsx.rs
src/destinations/html/: html_prefix.html  html_suffix.html  mod.rs
src/sources/: mod.rs  mysql.rs  postgres.rs
src/sources/duckdb/: mod.rs
src/sources/mysql/: mod.rs
src/sources/postgres/: mod.rs
src/sources/sqlite/: mod.rs
src/utils/: fileorstdout.rs  mod.rs
