[package]
authors = ["Maciej Dziardziel <fiedzia@gmail.com>"]
description = "Better database CLI tools. Export data and manage connections easier and faster."
edition = "2021"
homepage = "https://github.com/Fiedzia/dbfish"
license = "MIT"
name = "dbfish"
readme = "README.md"
repository = "https://github.com/Fiedzia/dbfish"
version = "0.1.1"

[dependencies]
atty = "0.2.11"
chrono = "0.4"
default-editor = "0.1.0"
dirs = "2"
humantime = "1.2.0"
icu_locid = { version = "1.5.0", optional = true }
id_tree = "1.7.0"
indicatif = "0.13"
lazy_static = "1.3.0"
prettytable-rs = "0.8.0"
regex = "1.3"
serde = "1.0.89"
serde_derive = "1.0.89"
structopt = "0.3"
termcolor = "1.0.4"
toml = "0.5"
unicode-segmentation = "1.2.1"
urlencoding = "1.0.0"

[dependencies.askama_escape]
optional = true
version = "0.2.0"

[dependencies.csv]
optional = true
version = "1.0"

[dependencies.fallible-iterator]
optional = true
version = "0.2"

[dependencies.json]
optional = true
version = "0.12"

[dependencies.json-color]
optional = true
version = "0.7.1"

[dependencies.mysql]
optional = true
version = "25"

[dependencies.postgres]
optional = true
version = "0.19"

[dependencies.spreadsheet-ods]
optional = true
version = "0.22.5"

[dependencies.rust_xlsxwriter]
optional = true
version = "0.79.0"
features = ["chrono"]

[dependencies.sqlite]
optional = true
version = "0.25"

[dependencies.sqlite3-src]
optional = true
version = "0.2.10"

[features]
default = [
    "use_csv",
    "use_html",
    "use_json",
    "use_mysql",
    "use_postgres",
    "use_ods",
    "use_xlsx",
    "use_sqlite",
    "use_text",
]
use_csv = ["csv"]
use_html = ["askama_escape"]
use_json = [
    "json",
    "json-color",
]
use_mysql = ["mysql"]
use_postgres = [
    "postgres",
    "fallible-iterator",
]
use_ods = ["spreadsheet-ods", "icu_locid"]
use_xlsx = ["rust_xlsxwriter"]
use_sqlite = [
    "sqlite",
    "sqlite3-src",
    "sqlite3-src/bundled",
]
use_text = []
icu_locid = ["dep:icu_locid"]
